Hid FMA areas to fix gap

--- a/less/custom/alumni/custom.less
+++ b/less/custom/alumni/custom.less
@@ -73,6 +73,13 @@
 .events .rss a.btn {
 	margin-top: 1em;
 }
+// Hide FMA
+.aboutus, .stayconnected, .volunteer, .benefits {
+	.feature-area {
+		display: none;
+	}
+}
+
 .social-media-links {
   img {
     width:  16px;
